--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
